--- a/inst/templates/dl_report.qmd
+++ b/inst/templates/dl_report.qmd
@@ -279,7 +279,12 @@ bad_issue <-
   dplyr::filter(
     !stringr::str_detect(
       issue_date,
-      "(0[1-9]|1[0-2])\\/(0[1-9]|[12][0-9]|3[01])\\/(2023|2024|2025)")) |>
+      paste0(
+        "(0[1-9]|1[0-2])\\/(0[1-9]|[12][0-9]|3[01])\\/(",
+        as.numeric(REF_CURRENT_SEASON) - 1, "|",
+        REF_CURRENT_SEASON, "|",
+        as.numeric(REF_CURRENT_SEASON) + 1, ")"))
+    )|>
   dplyr::group_by(source_file, dl_state, file_total, issue_date) |>
   dplyr::count() |>
   dplyr::ungroup() |>
