--- a/README.Rmd
+++ b/README.Rmd
@@ -51,7 +51,7 @@ Below are the definitive package versions used for each hunting season. To insta
 devtools::install_github("USFWS/migbirdHIP@v1.2.8", build_vignettes = T)
 ```
 
-* dev - 2025-2026
+* [v1.4.1](https://github.com/USFWS/migbirdHIP/releases/tag/v1.4.1) - `r names(migbirdHIP:::REF_RELEASES[migbirdHIP:::REF_RELEASES == "1.4.1"])`
 * [v1.3.0](https://github.com/USFWS/migbirdHIP/releases/tag/v1.3.0) - `r names(migbirdHIP:::REF_RELEASES[migbirdHIP:::REF_RELEASES == "1.3.0"])`
 * [v1.2.8](https://github.com/USFWS/migbirdHIP/releases/tag/v1.2.8) - `r names(migbirdHIP:::REF_RELEASES[migbirdHIP:::REF_RELEASES == "1.2.8"])`
 * [v1.2.7](https://github.com/USFWS/migbirdHIP/releases/tag/v1.2.7) - `r names(migbirdHIP:::REF_RELEASES[migbirdHIP:::REF_RELEASES == "1.2.7"])`
