--- a/inst/templates/dl_report.qmd
+++ b/inst/templates/dl_report.qmd
@@ -229,7 +229,10 @@ n_dropped <-
     year = params$year
   ) |>
   dplyr::mutate(
-    decision = paste("* Dropped", .data$n, .data$decision)) |>
+    n = 
+      ifelse(.data$n > 999, format.default(.data$n, big.mark = ","), .data$n),
+    decision = 
+      paste("    +", .data$n, .data$decision)) |>
   dplyr::select(-"n")
 
 fixed_data <- NULL
@@ -601,6 +604,7 @@ bullets <-
       seq_len(nrow(important_statistics)),
       ~dplyr::slice(important_statistics, .x) |> dplyr::pull())
     ,
+    "* We dropped:",
     # Dropped record summaries
     purrr::map(
       seq_len(nrow(n_dropped)),
