nDropped: added by_state param to summarize number of dropped records and reason per state

--- a/inst/templates/dl_report.qmd
+++ b/inst/templates/dl_report.qmd
@@ -226,7 +226,8 @@ n_dropped <-
     clean_data = cleaned_data,
     current_data = current_data,
     deduplicated_data = fixed_data,
-    year = params$year
+    year = params$year,
+    by_state = FALSE
   ) |>
   dplyr::mutate(
     n =
